# libspng

./: CMakeLists.txt  spng.c
cmake/template/: Config.cmake.in
